fix z-index in shared header nav

--- a/src/components/shared-header/global-nav/global-nav.scss
+++ b/src/components/shared-header/global-nav/global-nav.scss
@@ -3,7 +3,7 @@ header {
   position: fixed;
   top: 0;
   width: 100vw;
-  z-index: 1;
+  z-index: 2;
 
   > div {
     @include container();
